# android-playground

./: .claude_project.json  .gemini_project.json  .gitignore  .mcp.json  CLAUDE.md  CONTEXT.md  Cargo.toml  DESIGN_CLARIFICATION.md  DESIGN_DECISIONS.md  GEMINI.md  HISTORY.md  README.md  ROADMAP.md  build-wasm.sh  fix-async-functions.sh  fix-async.py  fix-rwlock-await.sh  fix-websocket-broadcast.patch  ide.html  mcp-bridge.js  mcp-server.js  test-browser.html  test-websocket.html  test-ws.html  test_dashboard.sh  test_dashboard2.sh  test_unified_dashboard.sh
apps/idle-mmo-rpg/: Cargo.toml
apps/idle-mmo-rpg/src/: main.rs
apps/playground-editor/: Cargo.toml  README.md
apps/playground-editor/src/: layout.rs  main.rs  message_bus.rs  messages.rs
apps/playground-editor/static/: app.js  index.html  styles.css
apps/playground-editor/static/webgl/: buffers.js  cache.js  context.js  renderer.js  shaders.js  text.js  textures.js
core/android/: Cargo.toml  README.md
core/android/src/: lib.rs  logger.rs
core/client/: Cargo.toml  README.md
core/client/src/: api.rs  channel.rs  client.rs  commands.rs  connection.rs  contracts.rs  input.rs  lib.rs  operations.rs  packet.rs  reconnect.rs  types.rs
core/client/src/components/: audio_state.rs  client_config.rs  client_state.rs  client_stats.rs  input_state.rs  mod.rs  render_target.rs
core/console/: Cargo.toml
core/console/src/: api.rs  commands.rs  console.rs  contracts.rs  input.rs  input_api.rs  lib.rs  logging.rs  output.rs  progress.rs  types.rs
core/ecs/: Cargo.toml  DESIGN.md  README.md  build.rs
core/ecs/src/: component.rs  entity.rs  entity_ref.rs  error.rs  lib.rs  messaging.rs  module.rs  module_exports.rs  query.rs  registry.rs  storage.rs  system.rs  system_commands.rs  system_registry.rs  version.rs  vtable.rs  world.rs  world_access.rs  world_commands.rs
core/ecs/src.old/: component.rs  entity.rs  entity_ref.rs  error.rs  generation.rs  lib.rs  messaging.rs
core/ecs/src/model/: mod.rs
core/ecs/src/view/: component.rs  entity.rs  event.rs  mod.rs  query.rs  storage.rs  system.rs  trait.rs  view.rs  world.rs
core/math/: Cargo.toml  README.md
core/plugin/: Cargo.toml  README.md
core/plugin/src/: lib.rs  loader.rs  trait.rs
core/rendering/: Cargo.toml  README.md
core/rendering/src/: api.rs  batch.rs  commands.rs  error.rs  lib.rs  operations.rs  renderer.rs  resources.rs  types.rs  wrapper.rs
core/rendering/src/components/: mod.rs
core/rendering/src/traits/: command.rs  mod.rs  renderer.rs  target.rs
core/server/: Cargo.toml  README.md
core/server/src/: api.rs  batcher.rs  bridge.rs  channel.rs  channel_manager.rs  commands.rs  connection.rs  dashboard.rs  handlers.rs  lib.rs  main.rs  mcp.rs  message.rs  operations.rs  packet.rs  server.rs  types.rs  websocket.rs
core/server/src/components/: channel.rs  connection.rs  message_queue.rs  mod.rs  server_config.rs  server_state.rs  server_stats.rs
core/server/src/mcp/: error.rs  jsonrpc.rs  mod.rs  protocol.rs  server.rs  server_old.rs  session.rs  sse_handler.rs  streamable_http.rs  tools.rs  ui_tools.rs
core/ui/: Cargo.toml
core/ui/src/: commands.rs  error.rs  events.rs  lib.rs  traits.rs  types.rs  wrapper.rs
modules/binding/: Cargo.toml
modules/binding/src/: binding.rs  lib.rs  pool.rs  registry.rs  stats.rs
modules/loader/: Cargo.toml
modules/loader/src/: lib.rs  loaded_module.rs  loader.rs
modules/registry/: Cargo.toml
modules/registry/src/: lib.rs  registry.rs  stats.rs
modules/registry/src/info/: mod.rs  module.rs  state.rs
modules/resolver/: Cargo.toml
modules/resolver/src/: lib.rs  resolver.rs
modules/resolver/src/config/: app.rs  declaration.rs  mod.rs  provides.rs
modules/types/: Cargo.toml
modules/types/src/: atomic.rs  error.rs  handle.rs  lib.rs  metadata.rs  once.rs  shared.rs  types.rs
modules/types/src/model/: base.rs  data.rs  mod.rs  type_id.rs
modules/types/src/module/: base.rs  mod.rs  (+3 more)
plugins/chat-assistant/: Cargo.toml  README.md
plugins/chat-assistant/src/: chat_view.rs  lib.rs  mcp_client.rs  plugin.rs
plugins/crafting/: Cargo.toml
plugins/crafting/src/: plugin.rs
plugins/economy/: Cargo.toml
plugins/economy/src/: plugin.rs
plugins/editor-core/: Cargo.toml  README.md
plugins/editor-core/src/: buffer.rs  editor_view.rs  lib.rs  plugin.rs  state.rs  vim.rs
plugins/idle-game/: Cargo.toml  README.md
plugins/idle-game/src/: lib.rs  plugin.rs  state.rs
plugins/lsp-client/: Cargo.toml  README.md
plugins/lsp-client/src/: lib.rs  plugin.rs
plugins/playground-editor/: Cargo.toml  README.md
plugins/playground-editor/src/: handlers.rs  lib.rs  plugin.rs  state.rs
plugins/ui-framework/: Cargo.toml  README.md
plugins/ui-framework/src/: browser_bridge.rs  channel_manager.rs  components.rs  lib.rs  main.rs  mcp_handler.rs  message_system.rs  orchestrator.rs  packet_types.rs  panel_manager.rs  plugin.rs  render_bridge.rs  ui_state.rs  websocket_handler.rs
systems/android/: Cargo.toml
systems/android/src/: jni.rs  lib.rs
systems/console/: Cargo.toml
systems/console/src/: console_system.rs  dashboard.rs  file_logger.rs  lib.rs  registration.rs  terminal.rs  vtable_handlers.rs
systems/ecs/: Cargo.toml  DESIGN.md  README.md
systems/ecs/src/: component.rs  entity.rs  executor.rs  implementation.rs  lib.rs  messaging.rs  module_exports.rs  operations.rs  query.rs  registration.rs  scheduler.rs  state.rs  storage.rs  storage_impl.rs  vtable_handlers.rs  world.rs  world_impl.rs
systems/logic/: Cargo.toml  README.md  build.rs  systems.toml
systems/logic/src/: archetype.rs  client_api.rs  component.rs  component_data.rs  console_api.rs  ecs_api.rs  entity.rs  error.rs  event.rs  event_data.rs  lib.rs  messaging.rs  networking_api.rs  query.rs  rendering_api.rs  rendering_interface.rs  resource_storage.rs  scheduler.rs  storage.rs  system.rs  system_data.rs  system_loader.rs  systems_manager.rs  ui_api.rs  ui_interface.rs  world.rs
systems/module-loader/: Cargo.toml
systems/module-loader/src/: dependency.rs  lib.rs  registry.rs  unsafe_loader.rs  watcher.rs
(+507 files in other folders)
