[workspace]
resolver = "2"
members = [
    "core/types",
    "core/ecs",
    "core/android",
    "core/server",
    "core/client",
    "core/plugin",
    "systems/ui",
    "systems/networking",
    "systems/physics",
    "systems/logic",
    "systems/rendering",
    "plugins/idle-game",
    "plugins/playground-editor",
]

[workspace.package]
version = "0.1.0"
authors = ["Ptolemy <ptolemy.l.jones@gmail.com>"]
edition = "2024"
license = "MIT OR Apache-2.0"
repository = "https://github.com/Tikaszar/android-playground"

[workspace.dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1", features = ["full"] }
tracing = "0.1"
tracing-subscriber = "0.3"
thiserror = "1.0"
anyhow = "1.0"
futures = "0.3"
futures-util = "0.3"
log = "0.4"

# For plugin system
libloading = "0.8"

# For server
axum = "0.8"
tower = "0.4"
tower-http = { version = "0.6", features = ["fs", "cors"] }

# Android specific
jni = "0.21"

# For hot reload
notify = "6.1"

# Math
nalgebra = { version = "0.33", features = ["serde-serialize"] }

# For ECS and networking
bytes = "1.5"
dashmap = "5.5"
parking_lot = "0.12"
indexmap = "2.1"
petgraph = "0.6"
fnv = "1.0"
uuid = { version = "1.6", features = ["v4", "serde"] }
lazy_static = "1.4"
rayon = "1.8"
async-trait = "0.1"
bincode = "1.3"