[workspace]
resolver = "2"
members = [
    # Module infrastructure
    "modules/types",
    "modules/loader",
    "modules/binding",
    "modules/resolver",
    "modules/registry",

    # Core layer
    "core/types",
    "core/ecs",
    "core/server",
    "core/client",
    "core/console",
    "core/rendering",
    "core/ui",

    # Systems layer
    "systems/ecs",
    "systems/ui",
    "systems/networking",
    "systems/console",
    "systems/physics",
    "systems/webgl",
    "systems/android",
    
    # Apps layer
    "apps/playground-editor",
    # "apps/idle-mmo-rpg",  # Commented out - not designed yet
    
    # Plugins layer - IDE plugins
    "plugins/editor-core",
    "plugins/file-browser",
    "plugins/terminal",
    "plugins/lsp-client",
    "plugins/debugger",
    "plugins/chat-assistant",
    "plugins/version-control",
    "plugins/theme-manager",
    
    # Plugins layer - Game plugins (commented out - not designed yet)
    # "plugins/inventory",
    # "plugins/combat",
    # "plugins/chat",
    # "plugins/crafting",
    # "plugins/quests",
    # "plugins/skills",
    # "plugins/economy",
    # "plugins/guild",
    # "plugins/progression",
    # "plugins/social",
    
    # Infrastructure plugins
    "plugins/ui-framework",
]

[workspace.package]
version = "0.1.0"
authors = ["Ptolemy <ptolemy.l.jones@gmail.com>"]
edition = "2021"
license = "MIT OR Apache-2.0"
repository = "https://github.com/Tikaszar/android-playground"

[workspace.dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1", features = ["full"] }
tracing = "0.1"
tracing-subscriber = "0.3"
thiserror = "1.0"
anyhow = "1.0"
futures = "0.3"
futures-util = "0.3"
log = "0.4"

# For plugin system
libloading = "0.8"

# For server
axum = "0.8"
tower = "0.4"
tower-http = { version = "0.6", features = ["fs", "cors"] }

# Android specific
jni = "0.21"

# For hot reload
notify = "6.1"

# Math
nalgebra = { version = "0.33", features = ["serde-serialize"] }

# For ECS and networking
bytes = "1.5"
indexmap = "2.1"
petgraph = "0.6"
fnv = "1.0"
uuid = { version = "1.6", features = ["v4", "serde"] }
lazy_static = "1.4"
once_cell = "1.19"
rayon = "1.8"
async-trait = "0.1"
bincode = "1.3"
chrono = "0.4"