[package]
name = "playground-apps-idle-mmo-rpg"
version.workspace = true
authors.workspace = true
edition.workspace = true
license.workspace = true

[[bin]]
name = "playground-apps-idle-mmo-rpg"
path = "src/main.rs"

[dependencies]
# Systems - Apps can use all systems
playground-systems-ui = { path = "../../systems/ui" }
playground-systems-networking = { path = "../../systems/networking" }
playground-systems-logic = { path = "../../systems/logic" }
playground-systems-rendering = { path = "../../systems/rendering" }

# Core dependencies for plugin management
playground-core-plugin = { path = "../../core/plugin" }
playground-core-types = { path = "../../core/types" }
playground-core-server = { path = "../../core/server" }

# Standard dependencies
tokio = { workspace = true, features = ["full"] }
serde = { workspace = true }
serde_json = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
dashmap = { workspace = true }
uuid = { workspace = true, features = ["v4", "serde"] }
anyhow = { workspace = true }