[package]
name = "playground-apps-editor"
version.workspace = true
authors.workspace = true
edition.workspace = true
license.workspace = true

[[bin]]
name = "playground-apps-editor"
path = "src/main.rs"

[dependencies]
# Systems - Apps primarily use systems/logic which initializes all others
playground-systems-logic = { path = "../../systems/logic" }

# Core dependencies for plugin management
playground-core-plugin = { path = "../../core/plugin" }
playground-core-types = { path = "../../core/types" }
playground-core-server = { path = "../../core/server" }

# Plugins
playground-plugins-ui-framework = { path = "../../plugins/ui-framework" }

# Web server
axum = "0.7"
tower = "0.4"
tower-http = { version = "0.5", features = ["fs", "cors", "trace"] }

# Standard dependencies
tokio = { workspace = true, features = ["full"] }
serde = { workspace = true }
serde_json = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
dashmap = { workspace = true }
uuid = { workspace = true, features = ["v4", "serde"] }
anyhow = { workspace = true }