[package]
name = "playground-apps-editor"
version.workspace = true
authors.workspace = true
edition.workspace = true
license.workspace = true

[[bin]]
name = "playground-apps-editor"
path = "src/main.rs"

[dependencies]
# Systems - Apps primarily use systems/logic which initializes all others
playground-systems-logic = { path = "../../systems/logic" }

# Core dependencies
playground-core-types = { path = "../../core/types" }

# Plugins
playground-plugins-ui-framework = { path = "../../plugins/ui-framework" }

# Web server
axum = { workspace = true }
tower = { workspace = true }
tower-http = { workspace = true }

# Standard dependencies
tokio = { workspace = true, features = ["full"] }
serde = { workspace = true }
serde_json = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
uuid = { workspace = true, features = ["v4", "serde"] }
anyhow = { workspace = true }