[package]
name = "playground-apps-editor"
version.workspace = true
authors.workspace = true
edition.workspace = true
license.workspace = true

[[bin]]
name = "playground-apps-editor"
path = "src/main.rs"

[dependencies]
# Systems - Apps primarily use systems/logic which initializes all others
playground-systems-logic = { path = "../../systems/logic" }

# Core dependencies
playground-core-types = { path = "../../core/types" }

# IDE Plugins - Each is self-contained, coordinated by this app
playground-plugins-ui-framework = { path = "../../plugins/ui-framework" }
playground-plugins-editor-core = { path = "../../plugins/editor-core" }
playground-plugins-file-browser = { path = "../../plugins/file-browser" }
playground-plugins-terminal = { path = "../../plugins/terminal" }
playground-plugins-lsp-client = { path = "../../plugins/lsp-client" }
playground-plugins-debugger = { path = "../../plugins/debugger" }
playground-plugins-chat-assistant = { path = "../../plugins/chat-assistant" }
playground-plugins-version-control = { path = "../../plugins/version-control" }
playground-plugins-theme-manager = { path = "../../plugins/theme-manager" }

# Web server
axum = { workspace = true }
tower = { workspace = true }
tower-http = { workspace = true }

# Standard dependencies
tokio = { workspace = true, features = ["full"] }
serde = { workspace = true }
serde_json = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
uuid = { workspace = true, features = ["v4", "serde"] }
anyhow = { workspace = true }