[package]
name = "playground-core-android"
version.workspace = true
authors.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
playground-core-types = { path = "../types" }
jni = { workspace = true }
anyhow = { workspace = true }
tracing = { workspace = true }
android_logger = "0.14"
log = "0.4"