[package]
name = "playground-client"
version.workspace = true
authors.workspace = true
edition.workspace = true
license.workspace = true

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
playground-types = { path = "../types" }
wasm-bindgen = "0.2"
wasm-bindgen-futures = "0.4"
js-sys = "0.3"
web-sys = { version = "0.3", features = [
    "console",
    "WebSocket",
    "MessageEvent",
    "CloseEvent",
    "ErrorEvent",
    "BinaryType",
    "Blob",
    "FileReader",
] }
bytes = "1.5"
futures = "0.3"
serde = { workspace = true }
serde-wasm-bindgen = "0.6"
gloo-timers = { version = "0.3", features = ["futures"] }

[target.'cfg(target_arch = "wasm32")'.dependencies]
wee_alloc = "0.4"
console_error_panic_hook = "0.1"