[package]
name = "playground-core-console"
version = "0.1.0"
edition = "2021"

[dependencies]
async-trait = { workspace = true }
bytes = { workspace = true }
playground-core-types = { path = "../types" }
playground-core-ecs = { path = "../ecs" }
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }
once_cell = { workspace = true }