[package]
name = "playground-core-console"
version = "0.1.0"
edition = "2021"

[dependencies]
playground-core-types = { path = "../types" }
playground-core-ecs = { path = "../ecs" }

bytes = { workspace = true }
tokio = { workspace = true }
serde = { workspace = true }
bincode = { workspace = true }

# Optional dependencies for features
serde_json = { workspace = true, optional = true }
chrono = { workspace = true, optional = true }

[features]
default = ["logging", "output"]

# Base features (always available)
output = []           # Basic console output (write, write_line, clear)
logging = []          # Logging system (log levels, components, etc.)

# Optional features
input = []            # Console input support (read_line, read_event)
progress = []         # Progress indicators and spinners
styling = []          # Text styling and colors
structured = ["serde_json"]  # Structured logging with JSON data
timestamps = ["chrono"]       # Enhanced timestamp formatting
dashboard = []        # Dashboard/monitoring support
file-logging = []     # File-based logging backend support
network-logging = []  # Network-based logging support