[package]
name = "playground-core-ecs"
version = "0.1.0"
edition = "2021"

[dependencies]
# Core dependencies only - no other core/* or systems/* packages!
playground-core-types = { path = "../types" }
bytes = { workspace = true }
thiserror = { workspace = true }
serde = { workspace = true }
tokio = { workspace = true }
once_cell = "1.20"
futures = { workspace = true }
bincode = { workspace = true }

[dev-dependencies]
tokio-test = "0.4"