[package]
name = "playground-core-ecs"
version = "1.0.0"
edition = "2021"

[lib]
name = "playground_core_ecs"
crate-type = ["dylib", "rlib"]

[dependencies]
playground-modules-types = { path = "../../modules/types" }
playground-core-types = { path = "../types" }
bytes = { workspace = true }
thiserror = { workspace = true }
serde = { workspace = true }
tokio = { workspace = true }
once_cell = "1.20"
futures = { workspace = true }
bincode = { workspace = true }
tracing = { workspace = true }

[dev-dependencies]
tokio-test = "0.4"

[package.metadata.module]
type = "core"