[package]
name = "playground-core-ecs"
version = "1.0.0"
edition = "2024"

[lib]
name = "playground_core_ecs"
crate-type = ["dylib", "rlib"]

[dependencies]
playground-modules-types = { path = "../../modules/types" }
async-trait = "0.1"
bytes = { workspace = true }
thiserror = { workspace = true }
serde = { workspace = true }
tokio = { workspace = true }
once_cell = "1.20"
futures = { workspace = true }
bincode = { workspace = true }
tracing = { workspace = true }

[build-dependencies]
playground-build-utils = { path = "../../modules/build-utils" }

[dev-dependencies]
tokio-test = "0.4"

[package.metadata.module]
type = "core"