[package]
name = "playground-plugin"
version.workspace = true
authors.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
playground-types = { path = "../types" }
libloading = { workspace = true }
anyhow = { workspace = true }
tracing = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
async-trait = "0.1"