[package]
name = "playground-core-rendering"
version = "0.1.0"
edition = "2021"

[dependencies]
playground-core-types = { path = "../types" }
playground-core-ecs = { path = "../ecs" }
serde = { version = "1.0", features = ["derive"] }
bincode = "1.3"
bytes = "1.5"
thiserror = "1.0"
tokio = { version = "1.36", features = ["sync"] }
once_cell = "1.19"

[features]
default = ["core-2d", "targets"]

# Core rendering features
core-2d = []          # 2D rendering primitives
core-3d = []          # 3D rendering with transforms
targets = []          # Render target management
commands = []         # Command buffer recording

# Resource management
shaders = []          # Shader compilation/management
textures = []         # Texture loading/management
buffers = []          # Vertex/index buffer management
uniforms = []         # Uniform buffer management
samplers = []         # Texture sampler states

# Advanced rendering
compute = []          # Compute shader support
instancing = []       # Instanced rendering
indirect = []         # Indirect/GPU-driven rendering
queries = []          # Occlusion/timing queries
tessellation = []     # Tessellation support
geometry-shaders = [] # Geometry shader support

# Optimization features
batching = []         # Automatic draw call batching
culling = []          # Frustum/occlusion culling
lod = []              # Level-of-detail support
streaming = []        # Resource streaming

# Pipeline features
pipelines = []        # Render pipeline states
passes = []           # Multi-pass rendering
framegraphs = []      # Frame graph support