[package]
name = "playground-core-rendering"
version = "0.1.0"
edition = "2021"

[dependencies]
playground-core-types = { path = "../types" }
playground-core-ecs = { path = "../ecs" }
serde = { version = "1.0", features = ["derive"] }
bincode = "1.3"
bytes = "1.5"
thiserror = "1.0"
tokio = { version = "1.36", features = ["sync"] }
once_cell = "1.19"

[features]
# Sensible defaults for most applications
default = ["core-2d", "core-3d", "shaders", "textures", "buffers"]

# Core rendering modes (at least one usually needed)
core-2d = []          # 2D rendering primitives
core-3d = []          # 3D rendering with transforms

# Resource management (commonly needed)
shaders = []          # Shader compilation/management
textures = []         # Texture loading/management
buffers = []          # Vertex/index buffer management
uniforms = ["buffers"] # Uniform buffer management (depends on buffers)
samplers = ["textures"] # Texture sampler states (depends on textures)

# Render target features
targets = []          # Render target management
passes = ["targets"]  # Multi-pass rendering (depends on targets)

# Advanced features
pipelines = ["shaders", "buffers"] # Render pipeline states
commands = []         # Command buffer recording
compute = ["shaders"] # Compute shader support
instancing = ["buffers"] # Instanced rendering
indirect = ["buffers"] # Indirect/GPU-driven rendering
queries = []          # Occlusion/timing queries
tessellation = ["shaders"] # Tessellation support
geometry-shaders = ["shaders"] # Geometry shader support

# Optimization features
batching = []         # Automatic draw call batching
culling = []          # Frustum/occlusion culling
lod = []              # Level-of-detail support
streaming = []        # Resource streaming
framegraphs = ["passes"] # Frame graph support

# Debug features
debug = []            # Debug rendering helpers

# Backend preferences (hints only)
prefer-webgl = []
prefer-vulkan = []
prefer-metal = []