[package]
name = "playground-server"
version.workspace = true
authors.workspace = true
edition.workspace = true
license.workspace = true

[lib]
name = "playground_server"
path = "src/lib.rs"

[[bin]]
name = "playground-server"
path = "src/main.rs"

[dependencies]
playground-types = { path = "../../core/types" }
playground-plugin = { path = "../../core/plugin" }
axum = { workspace = true, features = ["ws", "macros"] }
tower = { workspace = true }
tower-http = { workspace = true, features = ["fs", "cors"] }
tokio = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
anyhow = { workspace = true }
serde = { workspace = true }
tokio-tungstenite = "0.24"
bytes = "1.5"
dashmap = "6.0"
futures-util = "0.3"
serde_json = { workspace = true }

# MCP dependencies
async-trait = "0.1"
tokio-stream = "0.1"
uuid = { workspace = true, features = ["v4"] }
chrono = { version = "0.4", features = ["serde"] }
axum-extra = { version = "0.10", features = ["typed-header"] }
thiserror = { workspace = true }