[package]
name = "playground-core-server"
version.workspace = true
authors.workspace = true
edition.workspace = true
license.workspace = true

[lib]
name = "playground_core_server"
path = "src/lib.rs"

[dependencies]
playground-core-types = { path = "../../core/types" }
playground-core-ecs = { path = "../../core/ecs" }
serde = { workspace = true }
serde_json = { workspace = true }
async-trait = { workspace = true }
tokio = { workspace = true }
once_cell = { workspace = true }