[package]
name = "playground-core-ui"
version = "0.1.0"
edition = "2021"

[dependencies]
playground-core-types = { path = "../types" }
playground-core-rendering = { path = "../rendering" }
async-trait = "0.1"
serde = { version = "1.0", features = ["derive"] }
bincode = "1.3"
uuid = { version = "1.10", features = ["v4", "serde"] }
bytes = "1.7"