[package]
name = "playground-modules-binding"
version = "0.1.0"
edition = "2024"

[dependencies]
playground-modules-types = { path = "../types" }

# Async runtime
tokio = { version = "1.41", features = ["sync"] }

# Concurrent data structures
arc-swap = "1.7"

# Error handling
thiserror = "1.0"
anyhow = "1.0"

# Logging
tracing = "0.1"

# Serialization
serde = { version = "1.0", features = ["derive"] }
bincode = "1.3"