[package]
name = "playground-modules-loader"
version = "0.1.0"
edition = "2024"

[dependencies]
playground-modules-types = { path = "../types" }

# For dynamic library loading - THE ONLY UNSAFE
libloading = "0.8"

# Async runtime
tokio = { version = "1.41", features = ["full"] }

# Error handling
thiserror = "1.0"
anyhow = "1.0"

# Logging
tracing = "0.1"

# File watching for hot-reload
notify = "6.0"

# Serialization
serde = { version = "1.0", features = ["derive"] }
bincode = "1.3"