[package]
name = "playground-modules-registry"
version = "0.1.0"
edition = "2021"

[dependencies]
playground-modules-types = { path = "../types" }
playground-modules-loader = { path = "../loader" }
playground-modules-binding = { path = "../binding" }
playground-modules-resolver = { path = "../resolver" }

# Async runtime
tokio = { version = "1.41", features = ["full"] }

# Error handling
thiserror = "1.0"
anyhow = "1.0"

# Logging
tracing = "0.1"

# Serialization
serde = { version = "1.0", features = ["derive"] }
bincode = "1.3"

# File watching for hot-reload
notify = "6.0"