[package]
name = "playground-modules-resolver"
version = "0.1.0"
edition = "2024"

[dependencies]
playground-modules-types = { path = "../types" }

# TOML parsing for Cargo.toml
toml = "0.8"

# Semantic versioning
semver = "1.0"

# Error handling
thiserror = "1.0"
anyhow = "1.0"

# Logging
tracing = "0.1"

# Serialization
serde = { version = "1.0", features = ["derive"] }

# File system operations
walkdir = "2.3"