[package]
name = "playground-plugins-chat-assistant"
version.workspace = true
authors.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
async-trait = { workspace = true }
# TODO: Add core/* dependencies with feature flags when plugin is rewritten

# Core types for shared data structures
playground-core-types = { path = "../../core/types" }

# Standard dependencies
serde = { workspace = true }
serde_json = { workspace = true }
tracing = { workspace = true }
uuid = { workspace = true, features = ["v4", "serde"] }
tokio = { workspace = true }
nalgebra = { workspace = true }

# MCP client
reqwest = { version = "0.12", features = ["json"] }
