[package]
name = "crafting"
version.workspace = true
authors.workspace = true
edition.workspace = true
license.workspace = true

[lib]
crate-type = ["cdylib"]

[dependencies]
# Systems - Plugins use Systems APIs only (never Core directly)
playground-ui = { path = "../../systems/ui" }
playground-logic = { path = "../../systems/logic" }
playground-networking = { path = "../../systems/networking" }

# Plugin trait (required for all plugins)
playground-plugin = { path = "../../core/plugin" }
playground-types = { path = "../../core/types" }

# Standard dependencies
serde = { workspace = true }
serde_json = { workspace = true }
tracing = { workspace = true }
uuid = { workspace = true, features = ["v4", "serde"] }
tokio = { workspace = true }
