[package]
name = "playground-plugins-economy"
version.workspace = true
authors.workspace = true
edition.workspace = true
license.workspace = true

[lib]
crate-type = ["cdylib"]

[dependencies]
async-trait = { workspace = true }
# TODO: Add core/* dependencies with feature flags when plugin is rewritten

# Plugin trait (required for all plugins)
playground-core-types = { path = "../../core/types" }

# Standard dependencies
serde = { workspace = true }
serde_json = { workspace = true }
tracing = { workspace = true }
uuid = { workspace = true, features = ["v4", "serde"] }
tokio = { workspace = true }
