[package]
name = "playground-plugins-editor-core"
version.workspace = true
authors.workspace = true
edition.workspace = true
license.workspace = true


[dependencies]
async-trait = { workspace = true }
# TODO: Add core/* dependencies with feature flags when plugin is rewritten

# Core types for shared data structures
playground-core-types = { path = "../../core/types" }

# Standard dependencies
serde = { workspace = true }
serde_json = { workspace = true }
tracing = { workspace = true }
uuid = { workspace = true, features = ["v4", "serde"] }
tokio = { workspace = true }

# Editor-specific dependencies
tree-sitter = "0.20"
tree-sitter-rust = "0.20"
nalgebra = { workspace = true }