[package]
name = "idle-game"
version.workspace = true
authors.workspace = true
edition.workspace = true
license.workspace = true

[lib]
crate-type = ["cdylib"]

[dependencies]
playground-types = { path = "../../core/types" }
playground-plugin = { path = "../../core/plugin" }
playground-logic = { path = "../../systems/logic" }
playground-ui = { path = "../../systems/ui" }
serde = { workspace = true }
serde_json = { workspace = true }
tracing = { workspace = true }