[package]
name = "playground-plugins-lsp-client"
version.workspace = true
authors.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
async-trait = { workspace = true }
# Systems - Plugins use Systems APIs only (never Core directly)
playground-systems-ui = { path = "../../systems/ui" }
playground-systems-logic = { path = "../../systems/logic" }
playground-systems-networking = { path = "../../systems/networking" }

# Core types for shared data structures
playground-core-types = { path = "../../core/types" }

# Standard dependencies
serde = { workspace = true }
serde_json = { workspace = true }
tracing = { workspace = true }
uuid = { workspace = true, features = ["v4", "serde"] }
tokio = { workspace = true }
