[package]
name = "playground-editor"
version.workspace = true
authors.workspace = true
edition.workspace = true
license.workspace = true

[lib]
crate-type = ["cdylib"]

[dependencies]
playground-types = { path = "../../core/types" }
playground-plugin = { path = "../../core/plugin" }
playground-ui = { path = "../../systems/ui" }
playground-networking = { path = "../../systems/networking" }
serde = { workspace = true }
serde_json = { workspace = true }
tracing = { workspace = true }