[package]
name = "playground-plugins-ui-framework"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["dylib", "rlib"]


[dependencies]
tracing-subscriber = { workspace = true }
playground-core-types = { path = "../../core/types" }
playground-core-rendering = { path = "../../core/rendering" }

anyhow = "1.0"
async-trait = "0.1"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.42", features = ["full"] }
tracing = "0.1"
uuid = { version = "1.5", features = ["v4", "serde"] }
bytes = "1.5"
chrono = { version = "0.4", features = ["serde"] }
nalgebra = { workspace = true }