[package]
name = "playground-systems-console"
version = "0.1.0"
edition = "2021"

[dependencies]
# Core dependencies
playground-core-types = { path = "../../core/types" }
playground-core-ecs = { path = "../../core/ecs" }
playground-core-console = { path = "../../core/console", features = ["default"] }

# Workspace dependencies
tokio = { workspace = true }
bytes = { workspace = true }
chrono = { workspace = true }
bincode = { workspace = true }
serde = { workspace = true }
once_cell = { workspace = true }

# Terminal UI
crossterm = "0.28"

[features]
default = ["logging", "output", "terminal"]

# Base features
output = []           # Console output support
logging = []          # Logging support
input = []            # Input support
progress = []         # Progress indicator support

# Implementation features
terminal = []         # Terminal-based implementation
dashboard = []        # Dashboard monitoring
file-logging = []     # File-based logging