[package]
name = "playground-systems-ecs"
version = "0.1.0"
edition = "2024"

[lib]
crate-type = ["cdylib"]

[dependencies]
# Module system
playground-modules-types = { path = "../../modules/types" }

# Core dependencies
playground-core-ecs = { path = "../../core/ecs" }
playground-core-types = { path = "../../core/types" }

# Async runtime
tokio = { workspace = true }
async-trait = { workspace = true }

# Error handling
anyhow = { workspace = true }
thiserror = { workspace = true }

# Serialization
serde = { workspace = true }
bincode = { workspace = true }
bytes = { workspace = true }

# Logging
tracing = { workspace = true }

# State management
once_cell = "1.20"

# Collections (NO DashMap - use Shared<HashMap> instead)
indexmap = "2.0"

# Performance
rayon = "1.7"
crossbeam = "0.8"

[dev-dependencies]
tokio-test = "0.4"
criterion = "0.5"

[package.metadata.provides]
core = "playground-core-ecs"
features = []