[package]
name = "playground-logic"
version.workspace = true
authors.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
playground-types = { path = "../../core/types" }
playground-ecs = { path = "../../core/ecs" }

# Other systems to initialize
playground-networking = { path = "../networking" }
playground-ui = { path = "../ui" }
# playground-rendering = { path = "../rendering", features = ["webgl"] } # Browser-side only
# playground-physics = { path = "../physics" } # Not yet implemented
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
bytes = { workspace = true }
dashmap = { workspace = true }
parking_lot = { workspace = true }
indexmap = { workspace = true }
petgraph = { workspace = true }
fnv = { workspace = true }
uuid = { workspace = true }
lazy_static = { workspace = true }
rayon = { workspace = true }
async-trait = { workspace = true }