[package]
name = "playground-systems-logic"
version.workspace = true
authors.workspace = true
edition.workspace = true
license.workspace = true

[build-dependencies]
serde = { version = "1.0", features = ["derive"] }
toml = "0.8"

[dependencies]
playground-core-types = { path = "../../core/types" }
playground-core-ecs = { path = "../../core/ecs" }
playground-core-server = { path = "../../core/server" }
playground-core-rendering = { path = "../../core/rendering" }
playground-core-ui = { path = "../../core/ui" }

# Other systems to initialize
playground-systems-networking = { path = "../networking" }
playground-systems-ui = { path = "../ui" }
# playground-systems-rendering = { path = "../rendering", features = ["webgl"] } # Browser-side only
# playground-systems-physics = { path = "../physics" } # Not yet implemented
serde = { workspace = true }
serde_json = { workspace = true }
bincode = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
bytes = { workspace = true }
indexmap = { workspace = true }
petgraph = { workspace = true }
fnv = { workspace = true }
uuid = { workspace = true }
lazy_static = { workspace = true }
rayon = { workspace = true }
async-trait = { workspace = true }