[package]
name = "playground-systems-module-loader"
version = "0.1.0"
edition = "2021"

[dependencies]
playground-api = { path = "../../api" }
playground-core-types = { path = "../../core/types" }

# For dynamic library loading - THE ONLY UNSAFE
libloading = "0.8"

# Async runtime
tokio = { version = "1.41", features = ["full"] }

# Serialization
serde = { version = "1.0", features = ["derive"] }
bincode = "1.3"

# Error handling
thiserror = "1.0"
anyhow = "1.0"

# Logging
tracing = "0.1"

# File watching for hot-reload
notify = "6.0"

# Dependency resolution
semver = "1.0"

# Path handling
walkdir = "2.3"